# Fashion-Analyst

./: .gitignore  CLAUDE.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_pattern_mockups.py
backend/app/: celery_app.py  config.py  logging_conf.py  main.py
backend/app/agents/: base.py
backend/app/agents/answer_generator/: logic.py  node.py  prompts.py  schemas.py
backend/app/agents/document_extraction/: logic.py  node.py
backend/app/agents/embedding/: logic.py  node.py
backend/app/agents/image_understanding/: logic.py  node.py  (+1 more)
backend/app/api/: agents_admin.py  companies.py  health.py  ingestion.py  patterns.py  search.py  swatches.py  trade.py
backend/app/crawlers/: playwright_crawler.py  robots.py
backend/app/db/: qdrant_client.py  qdrant_collections.py  redis_client.py
backend/app/extraction/: catalog_parser.py  html_parser.py  pdf_parser.py
backend/app/graph/: ingestion_graph.py  query_graph.py  recrawl.py  state.py
backend/app/imagegen/: __init__.py  base.py  openai.py
backend/app/kg/: neo4j_client.py  schema.py
backend/app/pattern_rendering/: __init__.py  asanoha.py  base.py  color_extraction.py  gingham.py  herringbone.py  houndstooth.py  ichimatsu.py  kasuri.py  pinstripe.py  pipeline.py  schemas.py  seigaiha.py  storage.py  tartan.py
backend/app/rag/: bm25_index.py  chunking.py  hybrid_search.py
backend/app/schemas/: search.py
backend/app/tasks/: ingestion_tasks.py  pattern_tasks.py  scheduled.py
backend/app/trade/: __init__.py  base.py  un_comtrade.py
backend/tests/integration/: test_swatch_upload_to_render.py
backend/tests/unit/: test_color_extraction.py  test_pattern_asanoha.py  test_pattern_designer_logic.py  test_pattern_gingham.py  test_pattern_herringbone.py  test_pattern_houndstooth.py  test_pattern_ichimatsu.py  test_pattern_kasuri.py  test_pattern_pinstripe.py  test_pattern_seigaiha.py  test_pattern_tartan.py
(+69 files in other folders)
