[project]
name = "fashion-analyst-backend"
version = "0.1.0"
description = "Japan Fashion & Handloom Intelligence Platform - Multi-Agent RAG backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pydantic-ai>=0.0.14",
    "langgraph>=0.2.45",
    "langchain-core>=0.3.15",
    "llama-index-core>=0.11.20",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "voyageai>=0.3.1",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "neo4j>=5.26.0",
    "qdrant-client>=1.12.1",
    "rank-bm25>=0.2.2",
    "playwright>=1.48.0",
    "scrapy>=2.12.0",
    "beautifulsoup4>=4.12.3",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",
    "rapidfuzz>=3.10.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# db/postgres/base.py creates its async engine/connection pool once at import time, bound to
# whichever event loop is active then - function-scoped test loops (pytest-asyncio's default)
# would create a new loop per test and break that pool. Session scope matches the app's actual
# single-global-engine design.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
